# fyt

./: CMakeLists.txt  Detector.cpp  Detector_multi_pose.cpp  Detector_multi_pose_samefilter.cpp  Detector_pose.cpp  FeatureCollector.cpp  FeatureCollector.hpp  GRNN.cpp  GRNN.hpp  PhMdetector.cpp  PhMdetector.hpp  RunPhMDetector_list_multiPIE.cpp  boost.cpp  boost.hpp  boostTraining.cpp  boostingTest  cp.sh  distance.cpp  distance.hpp  face.cpp  face.hpp  faceLocator.cpp  faceLocator.hpp  heat.cpp  heat.hpp  loca_diff.txt  main_generate_fromtext.cpp  main_generate_train.cpp  main_test_pose.cpp  ouput.avi  plot.gp  run.sh  samples.csv  trained_boost.xml
Feature/: boostTraining.cpp  boostingPredict  boostingTrain  distance.txt  face_pix.txt  face_pix_diff.txt  generateData  generateData.cpp  loca_diff.txt  logistic.model  mouth_diff.txt  mouth_pix.txt  normalized_distance.txt  output  pose_diff.txt  predict  testing_boost.txt  testing_logistic.txt  train  trained_boost.xml  training.txt  training_boost.txt  training_logistic.txt  truth.txt
fifconvol_v5.0/: RP_transform.cpp  RP_transform.hpp  convol.cu  fifconvol_pyr.cu  fifconvol_pyr.hpp  resize_GPU.cu
results/: result.txt  result_60.txt  result_60_b10.txt  result_60_b10_ext25.txt  result_60_b10_ext27.7_sz28.txt  result_60_b10_ext27.txt  result_60_b10_ext28_mp.txt  result_60_b10_ext28_tem.txt  result_60_b10_ext33.txt  result_60_b10_ext36.txt  tem.txt
tools/: a.out  boost_predict.cpp  boostingPredict  mkPredict.sh  predictions.txt  trained_boost.xml  training_boost.txt  truth.txt  truthwriter.cpp
